[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Effects/Laser.png" type="Texture" id=1]
[ext_resource path="res://data/UI/Options.gd" type="Script" id=2]
[ext_resource path="res://data/UI/RegTheme.theme" type="Theme" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="Options" type="CanvasLayer"]
script = ExtResource( 2 )
minimum_value = -40.0

[node name="NinePatchRect" type="NinePatchRect" parent="."]
self_modulate = Color( 0.376471, 0.376471, 0.376471, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 128.0
margin_right = -128.0
theme = ExtResource( 3 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="NinePatchRect/HBoxContainer"]
margin_right = 100.0
margin_bottom = 540.0
rect_min_size = Vector2( 100, 0 )
custom_styles/separator = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/HBoxContainer"]
margin_left = 104.0
margin_right = 604.0
margin_bottom = 540.0
rect_min_size = Vector2( 500, 0 )
custom_constants/separation = 25
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="NinePatchRect/HBoxContainer/VBoxContainer"]
margin_top = 89.0
margin_right = 500.0
margin_bottom = 129.0
rect_min_size = Vector2( 0, 40 )
bbcode_enabled = true
bbcode_text = "[center]Options[/center]"
text = "Options"

[node name="GridContainer" type="GridContainer" parent="NinePatchRect/HBoxContainer/VBoxContainer"]
margin_top = 154.0
margin_right = 500.0
margin_bottom = 312.0
columns = 2

[node name="MasterLabel" type="RichTextLabel" parent="NinePatchRect/HBoxContainer/VBoxContainer/GridContainer"]
margin_right = 70.0
margin_bottom = 50.0
rect_min_size = Vector2( 70, 50 )
bbcode_enabled = true
bbcode_text = "[center]Master[/center]"
text = "Master"

[node name="MasterSlider" type="HSlider" parent="NinePatchRect/HBoxContainer/VBoxContainer/GridContainer"]
margin_left = 74.0
margin_right = 499.0
margin_bottom = 40.0
rect_min_size = Vector2( 425, 40 )
min_value = -40.0
max_value = 0.0

[node name="MusicLabel" type="RichTextLabel" parent="NinePatchRect/HBoxContainer/VBoxContainer/GridContainer"]
margin_top = 54.0
margin_right = 70.0
margin_bottom = 104.0
rect_min_size = Vector2( 70, 50 )
bbcode_enabled = true
bbcode_text = "[center]Music[/center]"
text = "Music"

[node name="MusicSlider" type="HSlider" parent="NinePatchRect/HBoxContainer/VBoxContainer/GridContainer"]
margin_left = 74.0
margin_top = 54.0
margin_right = 499.0
margin_bottom = 94.0
rect_min_size = Vector2( 0, 40 )
min_value = -40.0
max_value = 0.0

[node name="SFXLabel" type="RichTextLabel" parent="NinePatchRect/HBoxContainer/VBoxContainer/GridContainer"]
margin_top = 108.0
margin_right = 70.0
margin_bottom = 158.0
rect_min_size = Vector2( 70, 50 )
bbcode_enabled = true
bbcode_text = "[center]SFX[/center]"
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="NinePatchRect/HBoxContainer/VBoxContainer/GridContainer"]
margin_left = 74.0
margin_top = 108.0
margin_right = 499.0
margin_bottom = 148.0
rect_min_size = Vector2( 0, 40 )
min_value = -40.0
max_value = 0.0

[node name="Defaults" type="ToolButton" parent="NinePatchRect/HBoxContainer/VBoxContainer"]
margin_top = 337.0
margin_right = 500.0
margin_bottom = 381.0
text = "Defaults"

[node name="Return" type="ToolButton" parent="NinePatchRect/HBoxContainer/VBoxContainer"]
margin_top = 406.0
margin_right = 500.0
margin_bottom = 450.0
text = "Accept and Return"

[node name="VSeparator2" type="VSeparator" parent="NinePatchRect/HBoxContainer"]
margin_left = 608.0
margin_right = 708.0
margin_bottom = 540.0
rect_min_size = Vector2( 100, 0 )
custom_styles/separator = SubResource( 2 )
[connection signal="value_changed" from="NinePatchRect/HBoxContainer/VBoxContainer/GridContainer/MasterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="value_changed" from="NinePatchRect/HBoxContainer/VBoxContainer/GridContainer/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="NinePatchRect/HBoxContainer/VBoxContainer/GridContainer/SFXSlider" to="." method="_on_SFXSlider_value_changed"]
[connection signal="pressed" from="NinePatchRect/HBoxContainer/VBoxContainer/Defaults" to="." method="_on_Defaults_pressed"]
[connection signal="pressed" from="NinePatchRect/HBoxContainer/VBoxContainer/Return" to="." method="_on_Return_pressed"]
